--- a/burning/web/css/source/_extend.less
+++ b/burning/web/css/source/_extend.less
@@ -1,7 +1,9 @@
 // add slick
 @import 'slick/slick-theme.less';
 @import 'slick/slick.less';
-
+@import '_leftstyle.less';
+@import '_rightstyle.less';
 & when (@media-common =true) {
-
+      //style default
+ 
 }
