--- a/burning/web/css/source/_theme.less
+++ b/burning/web/css/source/_theme.less
@@ -1,4 +1,4 @@
-// set variables
+//  Fonts
 @font-lora-bold: "Lora-Bold";
 @font-lora-regular: "Lora-Regular";
 @font-roboto-bold: "Roboto-Bold";
@@ -6,26 +6,37 @@
 @font-market-regular: "market-regular";
 @font-roboto-medium: "Roboto-Medium";
 @font-opensans-bold: "OpenSans-Bold";
+
+//size
+
 @font-weight-700: 700;
 @font-size32: 32px;
 @font-size24: 24px;
 @font-size18: 18px;
 @font-size15: 15px;
 @font-size13: 13px;
-@size-20px: 20px;
+@size-20: 20px;
 @size-30px: 30px;
-@size-1px: 1px;
+@size-2px: 2px;
+@size-1px:1px;
+@size-input-text:320px;
+@size-180:180px;
+@size-140:140px;
+@size-40:40px;
+//color
+
 @color-green-default: #22b725;
 @color-green-standard: #11ab15;
 @color-green-message: #68c524;
 @color-red-validate: #ed1313;
-@color-f8: #f8f8f8;
-@color-a9: #a9a9a9;
-@color-333: #333;
-@color-777: #777;
-@color-a7: #a7a7a7;
-@color-f9: #f9f9f9;
-@color-2d:  #2d2d2d;
-@color-d1: #d1d1d1;
-@color-ddd: #ddd;
-@size-200: 200px;
+@color-stand-black:#3b3b3e;
+@color-checkbox:#2d2d2f;
+@color-disable:#cccccc;
+@color-checkbox-disable:#f4f4f4;
+@color-boder-check:#dddddd;
+@color-a9:#a9a9a9;
+@color-f9:#f9f9f9;
+@color-f8:#f8f8f8;
+@color-e4:#e4e4e4;
+@color-2d: #2d2d2d;
+@color-input-text:#333333;
