--- a/burning/web/css/source/_rightstyle.less
+++ b/burning/web/css/source/_rightstyle.less
@@ -1,4 +1,78 @@
 & when (@media-common =true) {
+
     //style default
 
+    // alert
+    .message-success {
+        .lib-message(success);
+        .lib-css(background, @color-white);
+        .lib-css(border, solid @size-1px @color-green-message );
+        .lib-css(text-align, center);
+        .lib-css(color, @color-green-message);
+        .lib-css(font-size, @font-size15);
+    }
+
+    .message-error {
+        .lib-message(error);
+        .lib-css(background, @color-white);
+        .lib-css(border, solid @size-1px @color-red-validate );
+        .lib-css(text-align, center);
+        .lib-css(font-size, @font-size15);
+    }
+
+    h1 {
+        .lib-css(font-family, @font-lora-regular);
+        .lib-css(font-size, @font-size32);
+    }
+
+    h2 {
+        .lib-css(font-family, @font-lora-regular);
+        .lib-css(font-size, @font-size24);
+    }
+
+    h3 {
+        .lib-css(font-family, @font-lora-regular);
+        .lib-css(font-size, @font-size18);
+    }
+
+    h4 {
+        .lib-css(font-family, @font-roboto-bold);
+        .lib-css(font-size, @font-size15);
+    }
+
+    a {
+        .lib-css(font-family, @font-roboto-regular);
+        .lib-css(color, @color-333);
+        .lib-css(cursor, pointer);
+
+        &:hover {
+            .lib-css(color, @color-777);
+        }
+    }
+
+    // cms block
+    .row {
+        .lib-css(margin, 0 -10px);
+        .lib-css(display, flex);
+
+        .col {
+            .lib-css(margin, 10px);
+            .lib-css(position, relative);
+
+            .col-content {
+                .lib-css(text-align, center);
+                .lib-css(position, absolute);
+                .lib-css(top, 50%);
+                .lib-css(left, 50%);
+                .lib-css(width, 100%);
+                .lib-css(transform, translate(-50%, -50%));
+                .lib-css(text-transform, uppercase);
+
+                a {
+                    .lib-css(font-family, @font-lora-bold);
+                    font-size: 20px;
+                }
+            }
+        }
+    }
 }
