--- a/burning/web/css/source/_leftstyle.less
+++ b/burning/web/css/source/_leftstyle.less
@@ -108,7 +108,7 @@
                 .lib-css(width, 8px);
                 .lib-css(height, 8px);
                 .lib-css(position, absolute);
-                .lib-css(left, 10.9%);
+                .lib-css(left, 0);
                 .lib-css(margin, 7px);
                 .lib-css(border-radius, 50%);
             }
@@ -172,24 +172,6 @@
 
     div.mage-error {
         .lib-css(color, @color-red9);
-    }
-
-    // alert
-    .message-success {
-        .lib-message(success);
-        .lib-css(background, @color-white);
-        .lib-css(border, solid @size-1px @color-green-message );
-        .lib-css(text-align, center);
-        .lib-css(color, @color-green-message);
-        
-    }
-
-    .message-error {
-
-        .lib-message(error);
-        .lib-css(background, @color-white);
-        .lib-css(border, solid @size-1px @color-red-validate );
-        .lib-css(text-align, center);
     }
 
     //navigation
