--- a/burning-log/web/css/source/_theme.less
+++ b/burning-log/web/css/source/_theme.less
@@ -47,7 +47,12 @@
 @h4__font-weight: @font-weight__bold;
 @h4__font-size-desktop: 15px;
 //  Links
-@link__color: @theme__color__primary-alt;
+// @link__color: @theme__color__primary-alt;
+
+@link__font-name: @font-roboto-regular;
+@link__color: @color-333;
+@link__text-decoration: none;
+@link__cursor: pointer;
 
 //  Focus
 @focus__color: @color-blue3;
