--- a/burning-log/Magento_Catalog/templates/product/view/addtocart.phtml
+++ b/burning-log/Magento_Catalog/templates/product/view/addtocart.phtml
@@ -12,7 +12,7 @@
 <div class="box-tocart">
     <div class="fieldset">
         <?php if ($block->shouldRenderQuantity()) :?>
-       <!--  <div class="field qty">
+        <!-- <div class="field qty">
             <label class="label" for="qty"><span><?= $block->escapeHtml(__('Qty')) ?></span></label>
             <div class="control">
                 <input type="number"
@@ -22,7 +22,7 @@
                        value="<?= $block->getProductDefaultQty() * 1 ?>"
                        title="<?= $block->escapeHtmlAttr(__('Qty')) ?>"
                        class="input-text qty"
-                       data-validate="<?= $block->escapeHtmlAttr(json_encode($block->getQuantityValidators())) ?>"
+                       data-validate="<?= $block->escapeHtml(json_encode($block->getQuantityValidators())) ?>"
                        />
             </div>
         </div> -->
