update style guide

--- a/burning-log/web/css/source/_buttons.less
+++ b/burning-log/web/css/source/_buttons.less
@@ -38,7 +38,7 @@
     }
 
     a.action.primary {
-        // .lib-link-as-button();
+        .lib-link-as-button();
             
     }
 
@@ -98,14 +98,14 @@
         
     }
     
-    a{
-        .lib-css(font-family, @font-roboto-regular);
-        .lib-css(color, @color-333);
-        .lib-css(text-decoration, none);
-        .lib-css(cursor, pointer);
+    // a{
+    //     .lib-css(font-family, @font-roboto-regular);
+    //     .lib-css(color, @color-333);
+    //     .lib-css(text-decoration, none);
+    //     .lib-css(cursor, pointer);
 
-        &:hover {
-            .lib-css(color, @color-777);
-        }
-    }
+    //     &:hover {
+    //         .lib-css(color, @color-777);
+    //     }
+    // }
 }
