--- a/burning-log/web/css/source/_typography.less
+++ b/burning-log/web/css/source/_typography.less
@@ -17,6 +17,15 @@
     .items {
         .lib-list-reset-styles();
     }
+    p{
+        .lib-typography(
+            @_font-size: @font-size13,
+            @_color: @color-333,
+            @_font-family: @font-roboto-regular,
+            @_font-weight: @font-weight-400,
+            @_line-height: @line-height20,
+        )
+    }
 }
 
 .lib-font-face (
@@ -88,7 +97,7 @@
     @_font-style: @font-style__base
 ){
     .lib-typography(
-        @_font-size: @_font-size,
+        @_font-size: 20px,
         @_color: @_color,
         @_font-family: @_font-family,
         @_font-weight: @_font-weight,
