--- a/burning-log/web/css/source/_theme.less
+++ b/burning-log/web/css/source/_theme.less
@@ -36,7 +36,7 @@
 //  Headings
 // @h3__font-weight: @font-weight__semibold;
 @h3__margin-top: @indent__base;
-@h1__font-size-desktop: 36px;
+@h1__font-size-desktop: 32px;
 
 @h2__font-size-desktop: 24px;
 
@@ -52,7 +52,6 @@
 @link__font-name: @font-roboto-regular;
 @link__color: @color-333;
 @link__text-decoration: none;
-@link__cursor: pointer;
 
 //  Focus
 @focus__color: @color-blue3;
@@ -543,3 +542,4 @@
 
 @link__color: @color-333;
 @link__text-decoration: none;
+@link__hover__color: @color-777;
